fixed boardpage and notifications styles on mobile

--- a/src/entities/Column/ui/TaskColumn.module.scss
+++ b/src/entities/Column/ui/TaskColumn.module.scss
@@ -1,12 +1,12 @@
 .container {
     background-color: var(--BoardBg);
-    position: relative;
     border-radius: 20px;
     border: 2px solid var(--altWbText);
     padding: 16px;
     position: relative;
     //max-width: 400px;
     height: 100%;
+
     &.withColor {
         padding-top: 29px;
     }
@@ -18,6 +18,11 @@
         margin-bottom: 22px;
         padding: 0;
     }
+
+
+        flex-basis: 300px;
+        flex-shrink: 0;
+
 }
 
 .headerColor {
@@ -91,5 +96,11 @@
 
     span {
         margin-left: 15px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .container  {
+        flex-basis: 250px;
     }
 }
