--- a/src/pages/BoardPage/ui/BoardPage.module.scss
+++ b/src/pages/BoardPage/ui/BoardPage.module.scss
@@ -4,6 +4,7 @@
     height: 100%;
     position: relative;
     width: 100%;
+    overflow: hidden;
 }
 
 
@@ -13,9 +14,11 @@
     height: 100%;
     gap: 15px;
     flex-basis: 100%;
+    //max-width: min-content;
     flex-grow: 0;
     flex-wrap: nowrap;
     overflow-y: auto;
+
     width: 100%;
 
     &::-webkit-scrollbar {
@@ -28,10 +31,7 @@
         background-color: var(--ScrollThumb);
     }
 
-    & > * {
-        flex-basis: 300px;
-        flex-shrink: 0;
-    }
+
 }
 
 
@@ -41,6 +41,7 @@
     width: 100%;
     height: 100%;
     flex-basis: 100%;
+    position: relative;
 
     .buttons {
         margin-left: 15px;
@@ -52,10 +53,23 @@
     .buttons>*:not(:last-child) {
         margin-bottom: 6px;
     }
+    //!
 }
 
-@media screen and (max-width: 550px) {
-    .columnsWrapper > * {
-        flex-basis: 100%;
+
+.newWrapper {
+    display: flex;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        width: 8px;
+        background-color: var(--ScrollBg);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: var(--ScrollThumb);
     }
 }
+
+
